Fix up pypi provides and requires

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/ed/35/2840fc985760ea5dd170b5e08a20
 archives = 
 giturl = https://github.com/blockdiag/sphinxcontrib-seqdiag.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
